--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "project-utils"]
 	path = project-utils
-	url = https://github.com/byu-cs329-fall-2021/project-utils-jesse-johnson
+	url = https://github.com/byu-cs329-fall-2021/project-utils-jesse-johnson.git
